--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <audio id="startupSound" src="sounds/startsounds2.wav" preload="auto"></audio>
     <div class="wrapper">
         <header class="conteiner">
             <span class="logo"><a href="">VRG TECH</a></span>
@@ -20,6 +21,6 @@
             </nav>
         </header>
     </div>
-    <script src="script.js"></script>
+    <script src="sounds.js"></script>
 </body>
 </html>
