--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <audio id="startupSound" src="sounds/startsounds2.wav" preload="auto"></audio>
     <div class="wrapper">
         <header class="conteiner">
+            <div class="toggle-container">
+  <label class="switch">
+    <input type="checkbox" id="fixToggle">
+    <span class="slider"></span>
+  </label>
+</div>
             <span class="logo"><a href="">VRG TECH</a></span>
             <nav>
                 <ul>
@@ -18,6 +24,7 @@
                     <li><a href="#">Категории</a></li>
                     <li class="btn"><a href="#">Корзина🛒</a></li>
                 </ul>
+                <button id="pin-toggle" class="pin-btn" title="Закрепить панель"></button>
             </nav>
         </header>
     </div>
