--- a/index.html
+++ b/index.html
@@ -25,9 +25,43 @@
                     <li class="btn"><a href="#">Корзина🛒</a></li>
                 </ul>
                 <button id="pin-toggle" class="pin-btn" title="Закрепить панель"></button>
+                <div class="theme-toggle">
+</div>
+
             </nav>
         </header>
     </div>
+    <section class="services">
+  <div class="container">
+    <h2 class="section-title">Наши услуги</h2>
+    <div class="services-grid">
+      <div class="service-card">
+        <div class="icon">📱</div>
+        <h3>Ремонт смартфонов</h3>
+        <p>Профессиональный ремонт iPhone, Samsung, Xiaomi и других брендов. Только оригинальные комплектующие и гарантия качества.</p>
+      </div>
+
+      <div class="service-card">
+        <div class="icon">🔋</div>
+        <h3>Замена аккумуляторов</h3>
+        <p>Быстрая и безопасная замена батарей с использованием сертифицированных компонентов и современных технологий пайки.</p>
+      </div>
+
+      <div class="service-card">
+        <div class="icon">💻</div>
+        <h3>Ремонт ноутбуков</h3>
+        <p>Диагностика, чистка, перепайка, замена матриц и клавиатур. Всё, чтобы ваш ноутбук снова работал как новый.</p>
+      </div>
+
+      <div class="service-card">
+        <div class="icon">⚙️</div>
+        <h3>Продажа комплектующих</h3>
+        <p>Дисплеи, аккумуляторы, кабели, стекла, аксессуары — всё для вашего устройства в наличии и под заказ.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
     <script src="sounds.js"></script>
     <script src="scroll.js"></script>
 </body>
