--- a/index.html
+++ b/index.html
@@ -7,62 +7,82 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio id="startupSound" src="sounds/startsounds2.wav" preload="auto"></audio>
+    <audio id="startupSound" src="sounds/startsounds1.wav" preload="auto"></audio>
+
     <div class="wrapper">
         <header class="conteiner">
-            <div class="toggle-container">
-  <label class="switch">
-    <input type="checkbox" id="fixToggle">
-    <span class="slider"></span>
-  </label>
-</div>
-            <span class="logo"><a href="">VRG TECH</a></span>
-            <nav>
-                <ul>
-                    <li class="active"><a href="#">Главная</a></li>
-                    <li><a href="#">Личный кабинет</a></li>
-                    <li><a href="#">Категории</a></li>
-                    <li class="btn"><a href="#">Корзина🛒</a></li>
-                </ul>
-                <button id="pin-toggle" class="pin-btn" title="Закрепить панель"></button>
-                <div class="theme-toggle">
-</div>
 
+            <!-- Тумблер для мобильной навигации -->
+            <div class="toggle-container">
+                <label class="switch">
+                    <input type="checkbox" id="fixToggle" checked>
+                    <span class="slider"></span>
+                </label>
+            </div>
+
+            <!-- Логотип -->
+            <span class="logo"><a href="#">VRG TECH</a></span>
+
+            <!-- Навигация -->
+            <nav class="main-nav">
+                <ul>
+                    <li class="active"><a href="#home">Главная</a></li>
+                    <li><a href="#account">Личный кабинет</a></li>
+                    <li><a href="#categories">Категории</a></li>
+                    <li><a href="cart.html">Корзина</a></li>
+                </ul>
             </nav>
+
         </header>
     </div>
-    <section class="services">
-  <div class="container">
-    <h2 class="section-title">Наши услуги</h2>
-    <div class="services-grid">
-      <div class="service-card">
-        <div class="icon">📱</div>
-        <h3>Ремонт смартфонов</h3>
-        <p>Профессиональный ремонт iPhone, Samsung, Xiaomi и других брендов. Только оригинальные комплектующие и гарантия качества.</p>
-      </div>
 
-      <div class="service-card">
-        <div class="icon">🔋</div>
-        <h3>Замена аккумуляторов</h3>
-        <p>Быстрая и безопасная замена батарей с использованием сертифицированных компонентов и современных технологий пайки.</p>
-      </div>
+    <!-- Секция "Главная" -->
+    <section id="home"></section>
 
-      <div class="service-card">
-        <div class="icon">💻</div>
-        <h3>Ремонт ноутбуков</h3>
-        <p>Диагностика, чистка, перепайка, замена матриц и клавиатур. Всё, чтобы ваш ноутбук снова работал как новый.</p>
-      </div>
+    <!-- Секция "Личный кабинет" -->
+    <section id="account"></section>
 
-      <div class="service-card">
-        <div class="icon">⚙️</div>
-        <h3>Продажа комплектующих</h3>
-        <p>Дисплеи, аккумуляторы, кабели, стекла, аксессуары — всё для вашего устройства в наличии и под заказ.</p>
-      </div>
-    </div>
-  </div>
-</section>
+    <!-- Секция "Категории" -->
+    <section id="categories"></section>
 
+    <!-- Секция "Корзина" -->
+    <section id="cart"></section>
+
+    <!-- Секция "Наши услуги" -->
+    <section class="services" id="services">
+        <div class="container">
+            <h2 class="section-title">Наши услуги</h2>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="icon">📱</div>
+                    <h3>Ремонт смартфонов</h3>
+                    <p>Профессиональный ремонт iPhone, Samsung, Xiaomi и других брендов. Только оригинальные комплектующие и гарантия качества.</p>
+                </div>
+
+                <div class="service-card">
+                    <div class="icon">🔋</div>
+                    <h3>Замена аккумуляторов</h3>
+                    <p>Быстрая и безопасная замена батарей с использованием сертифицированных компонентов и современных технологий пайки.</p>
+                </div>
+
+                <div class="service-card">
+                    <div class="icon">💻</div>
+                    <h3>Ремонт ноутбуков</h3>
+                    <p>Диагностика, чистка, перепайка, замена матриц и клавиатур. Всё, чтобы ваш ноутбук снова работал как новый.</p>
+                </div>
+
+                <div class="service-card">
+                    <div class="icon">⚙️</div>
+                    <h3>Продажа комплектующих</h3>
+                    <p>Дисплеи, аккумуляторы, кабели, стекла, аксессуары — всё для вашего устройства в наличии и под заказ.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Подключаем скрипты -->
     <script src="sounds.js"></script>
-    <script src="scroll.js"></script>
+    <script src="scroll.js"></script> <!-- сюда добавим плавный скролл -->
+    <script src="main.js"></script> <!-- сюда логика панели -->
 </body>
 </html>
