--- a/cart.html
+++ b/cart.html
@@ -26,6 +26,7 @@
         <ul>
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Личный кабинет</a></li>
+          <li><a href="services.html">Услуги</a></li> <!-- новая вкладка -->
           <li><a href="#">Категории</a></li>
           <li class="active"><a href="cart.html">Корзина</a></li>
         </ul>
