--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VRG TECH</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_services.css">
 </head>
 <body>
     <audio id="startupSound" src="sounds/startsounds1.wav" preload="auto"></audio>
@@ -26,8 +27,8 @@
             <!-- Навигация -->
             <nav class="main-nav">
                 <ul>
-                    <li class="active"><a href="#home">Главная</a></li>
-                    <li><a href="services.html">Услуги</a></li>
+                    <li><a href="index.html">Главная</a></li>
+                    <li class="active"><a href="services.html">Услуги</a></li>
                     <li><a href="#account">Личный кабинет</a></li>
                     <li><a href="#categories">Категории</a></li>
                     <li><a href="cart.html">Корзина</a></li>
@@ -36,6 +37,41 @@
 
         </header>
     </div>
+<!-- Секция "Наши услуги" -->
+<section class="services" id="services">
+  <div class="container">
+    <h2 class="section-title">Наши услуги</h2>
+    <div class="services-grid">
+  <div class="service-card">
+    <div class="icon">📱</div>
+    <h3>Ремонт смартфонов</h3>
+    <p>Профессиональный ремонт iPhone, Samsung, Xiaomi и других брендов с гарантией качества.</p>
+  </div>
+
+  <div class="service-card">
+    <div class="icon">🔋</div>
+    <h3>Замена аккумуляторов</h3>
+    <p>Быстрая и безопасная замена батарей с использованием сертифицированных компонентов.</p>
+  </div>
+
+  <div class="service-card">
+    <div class="icon">💻</div>
+    <h3>Ремонт ноутбуков</h3>
+    <p>Диагностика, чистка, замена матриц и клавиатур для восстановления работы устройства.</p>
+  </div>
+
+  <div class="service-card">
+    <div class="icon">⚙️</div>
+    <h3>Продажа комплектующих</h3>
+    <p>Дисплеи, аккумуляторы, кабели и аксессуары — всё для вашего устройства в наличии.</p>
+  </div>
+</div>
+
+    </div>
+  </div>
+</section>
+
+
 
     <!-- Секция "Главная" -->
     <section id="home"></section>
